docs(comment): add comments' API docs and add them to swagger
