# docs/swagger.json
@@ -357,6 +357,94 @@
                     }
                 }
             }
+        },
+        "/rooms/{id}/comments": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "comments"
+                ],
+                "summary": "Get the comments",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.CommentReponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "post": {
+                "description": "Moderator (room owner) bypasses all checks.\nOther users get 403 when:\n- it's not your turn\n- you're not registered (not approved by moderator)\n- the discussion is not started yet\n- the discussion has ended",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "comments"
+                ],
+                "summary": "Create a comment",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Room ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Comment",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CommentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "forbidden: not your turn / not registered / discussion not started yet / discussion has ended",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -370,6 +458,17 @@
                     "type": "integer"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.CommentRequest": {
+            "type": "object",
+            "required": [
+                "content"
+            ],
+            "properties": {
+                "content": {
                     "type": "string"
                 }
             }
@@ -403,6 +502,9 @@
                 "scheduled_date": {
                     "type": "string"
                 },
+                "state": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
                 }
@@ -433,6 +535,9 @@
         },
         "dto.RoomResponse": {
             "type": "object",
+            "required": [
+                "room_id"
+            ],
             "properties": {
                 "assigned_to_comment": {
                     "type": "integer"
@@ -476,6 +581,9 @@
                 "scheduled_date": {
                     "type": "string"
                 },
+                "state": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
                 }
@@ -483,9 +591,6 @@
         },
         "dto.RoomUpdateRequest": {
             "type": "object",
-            "required": [
-                "room_id"
-            ],
             "properties": {
                 "add_user_id": {
                     "type": "integer"
@@ -502,11 +607,15 @@
                 "book_title": {
                     "type": "string"
                 },
-                "room_id": {
-                    "type": "integer"
-                },
                 "scheduled_date": {
                     "type": "string"
+                },
+                "state": {
+                    "type": "string",
+                    "enum": [
+                        "started",
+                        "ended"
+                    ]
                 },
                 "title": {
                     "type": "string"
